fix(html/sass): trying to aligning footer for sponsors

--- a/css/style.css
+++ b/css/style.css
@@ -2770,11 +2770,6 @@ body.noscript .fw-toggle {
   }
 }
 
-img {
-  display: block;
-  width: 100%;
-}
-
 .fe-holder {
   background-color: #55565a;
 }
@@ -2862,24 +2857,28 @@ img {
   background-image: url(http://grads.images.algonquindesign.ca/2016/img/pause-button.svg);
 }
 
-body {
-  padding: 0;
-  margin: 0;
-}
-
-footer {
+.grid-middle {
   background-color: #55565a;
   color: #fff;
 }
 
 .ft-copyright {
   overflow: hidden;
+  display: block;
 }
 
 .ft-sponsor {
-  padding: .5em;
+  padding-left: .5em;
+  width: 100px;
+  width: 100px;
+  margin: auto 0;
 }
 
 .thanks {
   display: block;
+  text-align: center;
+}
+
+.sponsors {
+  display: inline-block;
 }
